keycloak/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: keycloak
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: keycloak
  type: ClusterIP
