keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # Wildcards are ignored by some browsers. That's why kbn-version for Kibana is added here
    nginx.ingress.kubernetes.io/cors-allow-headers: "kbn-version,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
  name: keycloak
spec:
  rules:
  - host: keycloak.$(PLATFORM_CONFIG_DOMAIN)
    http:
      paths:
      - backend:
          serviceName: keycloak-http
          servicePort: 80
        path: /
  tls:
  - hosts:
    - keycloak.$(PLATFORM_CONFIG_DOMAIN)
    secretName: keycloak-tls
